# MIET-labs-C-plus-plus

./: .gitignore  1.csv  CMakeLists.txt  CSVReader.cpp  Circle.cpp  Circle.h  Empl.h  Figure.cpp  Figure.h  JSONReader.cpp  JSONReader.h  PainterWidget.cpp  PainterWidget.h  README.md  Rectangle.cpp  Rectangle.h  Triangle.cpp  Triangle.h  anglepoly.h  circle.cpp  circle.h  drawing.pro  drawwidget.cpp  drawwidget.h  employer.cpp  employer.h  employers.cpp  employers.h  figure.cpp  figure.h  json.hpp  lab2.pro  lab4.pro  lab_support.cpp  main.cpp  main2.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
lab0/: 0  2  CMakeLists.txt  README.md  csv.csv
lab1/: CMakeLists.txt  csv.csv
lab2/: 1  CMakeLists.txt  csv.csv  employer.cpp  employer.h  employers.cpp  employers.h  lab.h  lab_support.cpp  main2.cpp  mainwindow.cpp  mainwindow.h  out_data.h
lab3/: 1  Empl.cpp  JSONReader.cpp  employer.cpp  employer.h  employers.cpp  employers.h  lab3.pro  lab_support.cpp  main.cpp  main2.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  out_data.cpp  out_data.h
lab4/: AbstractReader.cpp  AbstractReader.h  CMakeLists.txt  CSVReader.cpp  CSVReader.h  Employer.cpp  Employer.h  JSONReader.cpp  JSONReader.h  employer.cpp  lab.h  lab4.pro  lab_support.cpp  main.cpp  main2.cpp  mainwindow.ui  test
lab6/: 1.csv  1.json  AbstractReader.h  CMakeLists.txt  CSVReader.cpp  CSVReader.h  CsvException.cpp  CsvException.h  Student.cpp  Student.h  error_text_browser.cpp  lab.h  lab4.pro  main2.cpp  mainwindow.cpp  mainwindow.h  out_data.h  professor.cpp  professor.h
lab7/: CMakeLists.txt  Point.cpp  (+4 more)
(+35 files in other folders)
